prevent scrollbars for postit

--- a/styles/resume.scss
+++ b/styles/resume.scss
@@ -3,6 +3,10 @@
 
 $left-section-width: 180px;
 
+body {
+  overflow-x: hidden;
+}
+
 #postit {
   position: absolute;
   height: 200px;
